# ComputerOccupyingMonitor

./: .gitignore  README.md
APP/usb/usb_cdc/: .project  .template
APP/usb/usb_cdc/shell/: shell_cfg.h  shell_cmd.c
APP/usb/usb_cdc/src/: usb_descript.h
CADModel/: 开老板的电表盒.SLDPRT  开老板的电表盒Ver1.0.SLDASM  板子.SLDASM  电压表.SLDPRT  电表盒装配.SLDASM
EmbeddedProject/: CMakeLists.txt
EmbeddedProject/APP/: .template
EmbeddedProject/APP/src/: Main.c  io_config.h  led.c  led.h  log.c  log.h  monitor.c  monitor.h  ringbuffer.c  usb_cdc.c
EmbeddedProject/SRC/Ld/: Link.ld
EmbeddedProject/firmware/: CH571Prj.elf  CH571Prj.hex
example/APP/usb/usb_cdc/: .cproject  .project  .template
example/APP/usb/usb_cdc/shell/: shell.c  shell.h  shell_cmd.h
example/APP/usb/usb_cdc/src/: Main.c  my_uart.c  my_uart.h  usb_cdc.c  usb_cdc.h  usb_descript.c
